# scraping-subsystem

./: .gitignore  README.md  pyproject.toml  upload_to_pypi.sh
docs/: UML Краулера.drawio  АКД Подсистемы оценки тональности.drawio
scraping_subsystem/: airflow_python_callables.py
scraping_subsystem/scraper/spiders/: otzovik_spider.py
