[tool.poetry]
name = "scraping-subsystem"
version = "0.1.7"
description = ""
authors = ["DieNice <DailyPlanning@bk.ru>"]
readme = "README.md"
packages = [{include = "scraping_subsystem"},{ include ="README.md"}]

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.9.0"
bs4 = "^0.0.1"
nltk = "^3.8.1"
pandas = "^2.0.2"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"
autopep8 = "^2.0.2"
mypy = "^1.3.0"
ipython = "^8.14.0"
tqdm = "^4.65.0"
pytest = "^7.3.2"

[tool.pylint.messages_control]
disable = [
    "too-many-arguments",
    "too-many-boolean-expressions",
    "too-many-branches",
    "logging-fstring-interpolation"]

[tool.mypy]
python_version = 3.8
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = ['.*']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
